Add paper structure

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -18,8 +18,10 @@ Ghent University – imec
 </header>
 
 <main>
-  <!-- Add sections by specifying their file name, excluding the '.md' suffix. -->
-  <%= section 'introduction'  %>
+  <%= section 'introduction' %>
+  <%= section 'metadata_extraction' %>
+  <%= section 'evaluation' %>
+  <%= section 'conclusions' %>
 </main>
 
 <footer></footer>
