--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -19,7 +19,8 @@ Ghent University – imec
 
 <main>
   <%= section 'introduction' %>
-  <%= section 'metadata_extraction' %>
+  <%= section 'adhoc_metadata_extraction' %>
+  <%= section 'querybased_metadata_extraction' %>
   <%= section 'evaluation' %>
   <%= section 'conclusions' %>
 </main>
