--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -4,7 +4,7 @@ title: "Recursive Querying:<br />Query-based Metadata Extraction for Querying ov
 <header markdown="1">
 # <%= @item[:title] %>
 
-{:#authors}
+<!--{:#authors}
 - <%= person 'Ruben Taelman', 'http://www.rubensworks.net/', 'http://www.rubensworks.net/#me' %>
 - <%= person 'Miel Vander Sande', '#', 'https://data.verborgh.org/people/miel_vander_sande' %>
 - <%= person 'Ruben Verborgh', 'https://ruben.verborgh.org/', 'https://ruben.verborgh.org/profile/#me' %>
@@ -12,7 +12,7 @@ title: "Recursive Querying:<br />Query-based Metadata Extraction for Querying ov
 {:#affiliations}
 - {:#idlab} IDLab,
             Department of Electronics and Information Systems,
-Ghent University – imec
+Ghent University – imec-->
 
 <%= section 'abstract' %>
 </header>
