--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Recursive Querying:<br />Query-based Metadata Extraction for Querying over Hypermedia-based Linked Datasources"
+title: "Recursive Meta-Querying:<br />Query-based Metadata Extraction for Querying over Hypermedia-based Linked Datasources"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
